[gd_scene load_steps=6 format=2]

[ext_resource path="res://resources/fonts/roboto-large.tres" type="DynamicFont" id=1]
[ext_resource path="res://resources/fonts/roboto-medium.tres" type="DynamicFont" id=2]
[ext_resource path="res://resources/fonts/roboto-regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/textures/token.png" type="Texture" id=4]
[ext_resource path="res://interface/scrips/AdventurerOption.gd" type="Script" id=5]

[node name="AdventurerOption" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="HBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0
custom_constants/separation = 60
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TokenTexture" type="TextureRect" parent="Container"]
margin_right = 128.0
margin_bottom = 229.0
mouse_filter = 2
texture = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Container"]
margin_left = 188.0
margin_right = 928.0
margin_bottom = 229.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="Container/VBoxContainer"]
margin_right = 740.0
margin_bottom = 57.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 1 )
text = "Name"

[node name="StatsContainer" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 77.0
margin_right = 740.0
margin_bottom = 120.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 60

[node name="HealthContainer" type="HBoxContainer" parent="Container/VBoxContainer/StatsContainer"]
margin_right = 121.0
margin_bottom = 43.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Label" type="Label" parent="Container/VBoxContainer/StatsContainer/HealthContainer"]
margin_right = 41.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "HP:"

[node name="HealthLabel" type="Label" parent="Container/VBoxContainer/StatsContainer/HealthContainer"]
margin_left = 61.0
margin_right = 121.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "100"

[node name="AttackContainer" type="HBoxContainer" parent="Container/VBoxContainer/StatsContainer"]
margin_left = 181.0
margin_right = 276.0
margin_bottom = 43.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Label" type="Label" parent="Container/VBoxContainer/StatsContainer/AttackContainer"]
margin_right = 55.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "ATK:"

[node name="AttackLabel" type="Label" parent="Container/VBoxContainer/StatsContainer/AttackContainer"]
margin_left = 75.0
margin_right = 95.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "3"

[node name="MagicContainer" type="HBoxContainer" parent="Container/VBoxContainer/StatsContainer"]
margin_left = 336.0
margin_right = 440.0
margin_bottom = 43.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Label" type="Label" parent="Container/VBoxContainer/StatsContainer/MagicContainer"]
margin_right = 64.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "MAG:"

[node name="MagicLabel" type="Label" parent="Container/VBoxContainer/StatsContainer/MagicContainer"]
margin_left = 84.0
margin_right = 104.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "1"

[node name="SpeedContainer" type="HBoxContainer" parent="Container/VBoxContainer/StatsContainer"]
margin_left = 500.0
margin_right = 588.0
margin_bottom = 43.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Label" type="Label" parent="Container/VBoxContainer/StatsContainer/SpeedContainer"]
margin_right = 48.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "AGI:"

[node name="SpeedLabel" type="Label" parent="Container/VBoxContainer/StatsContainer/SpeedContainer"]
margin_left = 68.0
margin_right = 88.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "2"

[node name="DefenseContainer" type="HBoxContainer" parent="Container/VBoxContainer/StatsContainer"]
margin_left = 648.0
margin_right = 740.0
margin_bottom = 43.0
mouse_filter = 2
custom_constants/separation = 20

[node name="Label" type="Label" parent="Container/VBoxContainer/StatsContainer/DefenseContainer"]
margin_right = 52.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "DEF:"

[node name="DefenseLabel" type="Label" parent="Container/VBoxContainer/StatsContainer/DefenseContainer"]
margin_left = 72.0
margin_right = 92.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
text = "0"

[node name="EquipContainer" type="HBoxContainer" parent="Container/VBoxContainer"]
margin_top = 140.0
margin_right = 740.0
margin_bottom = 183.0
custom_constants/separation = 20

[node name="Label" type="Label" parent="Container/VBoxContainer/EquipContainer"]
margin_right = 181.0
margin_bottom = 43.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
custom_colors/font_color = Color( 0.607843, 0.607843, 0.607843, 1 )
text = "Equipment:"

[node name="EquipLabel" type="Label" parent="Container/VBoxContainer/EquipContainer"]
margin_left = 201.0
margin_right = 740.0
margin_bottom = 43.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/font = ExtResource( 2 )
autowrap = true
[connection signal="gui_input" from="Container" to="." method="_on_Container_gui_input"]
